--- a/config.yaml
+++ b/config.yaml
@@ -21,7 +21,7 @@ params:
     buttonClear: Clear
     buttonSend: Send message
     email:
-      - email: example@domain.com
+      - email: crichardson.mba2023@london.edu
         title: Email
     enable: yes
     phone:
