--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,8 @@ params:
   banner:
     buttonText: Get Started
     subtitle: |-
-      A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP
+      LBS MBA 2nd-year. Start-up investments, venture capital, family offices.
+      #A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP
       AND RELEASED UNDER THE CREATIVE COMMONS.
     title: Portfolio Website for Colby Richardson
   blog: {}
@@ -29,7 +30,7 @@ params:
         title: Cell
   custom_css: []
   custom_js: []
-  description: LBS MBA 2nd-year. Start-up investments, venture capital, family offices.
+  description: 
   error404:
     heading: Page couldn't be found
     text: Please visit [this page](/)
@@ -53,12 +54,12 @@ params:
         url: https://www.instagram.com
       - icon: fa-github
         label: GitHub
-        url: https://www.github.com
+        url: https://www.github.com/rolbadolce
       - icon: fa-linkedin
         label: LinkedIn
-        url: https://www.linkedin.com
+        url: https://www.linkedin.com/colby-richardson29/
   image: ''
-  name: Your name
+  name: Colby Richardson
   navigation:
     button1:
       - name: Get Started
