--- a/config.yaml
+++ b/config.yaml
@@ -8,9 +8,8 @@ params:
   banner:
     buttonText: Get Started
     subtitle: |-
-      LBS MBA 2nd-year. Start-up investments, venture capital, family offices.
-      #A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP
-      AND RELEASED UNDER THE CREATIVE COMMONS.
+      LBS MBA 2nd-year. Start-up investments, sustainability, family offices.
+      
     title: Portfolio Website for Colby Richardson
   blog: {}
   contact:
@@ -36,22 +35,22 @@ params:
     text: Please visit [this page](/)
   favicon: favicon.ico
   footer:
-    copyright: Company Name
+    copyright: #Company Name
     enable: yes
     quicklinks:
       - alt: HTML5 UP
         text: 'Design: '
         url: https://www.html5up.net
     social:
-      - icon: fa-twitter
-        label: Twitter
-        url: https://www.twitter.com
-      - icon: fa-facebook
-        label: Facebook
-        url: https://www.facebook.com
-      - icon: fa-instagram
-        label: Instagram
-        url: https://www.instagram.com
+      #- icon: fa-twitter
+       # label: Twitter
+      #  url: #https://www.twitter.com
+     # - icon: #fa-facebook
+      #  label: #Facebook
+     #   url: #https://www.facebook.com
+     # - icon: #fa-instagram
+     #   label: #Instagram
+     #   url: #https://www.instagram.com
       - icon: fa-github
         label: GitHub
         url: https://www.github.com/rolbadolce
@@ -62,50 +61,50 @@ params:
   name: Colby Richardson
   navigation:
     button1:
-      - name: Get Started
+      - name: About
         url: blogs
     button2:
       - name: Log In
         url: '#'
     links:
-      - name: Home
-        url: '#'
-      - name: Blogs
-        url: blogs
-      - name: Generic Blog
-        url: blogs/ipsum
+      - name: Risk/Return
+        url: blogs/risk_return
+      - name: Family Office
+        url: blogs/family-office
+      - name: Sustainability
+        url: blogs/sustainability
       - name: Elements
         url: elements.html
     menu: Menu
-    subtitle: By HTML5 Up
-    title: Forty
+    subtitle: You're in the place #By HTML5 Up
+    title: Blog Site #Forty
   tiles:
     enable: yes
     showcase:
-      - image: pic01.jpg
-        subtitle: Ipsum Dolor Sit Amet
-        title: Aliquam
-        url: blogs/aliquam
+      - image: lbs.jpg
+       # subtitle: 
+        title: Risk/Return
+        url: blogs/risk_return
       - image: pic02.jpg
-        subtitle: Feugiat Amet Tempus
-        title: Tempus
-        url: blogs/tempus
+      #  subtitle: 
+        title: Family Office
+        url: blogs/family_office
       - image: pic03.jpg
-        subtitle: Lorem Etiam Nullam
-        title: Magna
-        url: blogs/magna
+       # subtitle: Lorem Etiam Nullam
+        title: Sustainability
+        url: blogs/sustainability
       - image: pic04.jpg
-        subtitle: Nisl Sed Aliquam
-        title: Ipsum
-        url: blogs/ipsum
-      - image: pic05.jpg
-        subtitle: Ipsum Dolor Sit Amet
-        title: Consequat
-        url: blogs/ipsum
-      - image: pic06.jpg
-        subtitle: Feugiat Amet Tempus
-        title: Etiam
-        url: blogs/ipsum
+       # subtitle: 
+        title: Investing
+        url: blogs/investing
+     # - image: pic05.jpg
+     #   subtitle: Ipsum Dolor Sit Amet
+     #   title: Consequat
+     #   url: blogs/ipsum
+    #  - image: pic06.jpg
+    #    subtitle: Feugiat Amet Tempus
+    #    title: Etiam
+    #    url: blogs/ipsum
   two:
     buttonText: Get Started
     enable: yes
