--- a/config.yaml
+++ b/config.yaml
@@ -108,11 +108,11 @@ params:
   two:
     buttonText: Get Started
     enable: yes
-    subtitle: "Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
-      \n    Mauris aliquet magna magna sed nunc rhoncus pharetra. \n    Pellentesque
-      condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
-      pellentesque lorem ipsum dolor. \n    Nullam et orci eu lorem consequat tincidunt.
-      Vivamus et sagittis libero.\n    Mauris aliquet magna magna sed nunc rhoncus
-      amet pharetra et feugiat tempus."
-    title: Massa libero
+    subtitle: "Thoughts. Thinking. Wisdom? No. Concepts? Could be. What is the nature
+      \n    if the nature is already the present. \n    If time is an illusion, what
+      are ghosts made of?
+      Answers do not come knocking \n  if the door is already ajar.  
+      Finding solace is as easy as forgetting.\n    What is the past but a movie your mind
+      plays on repeat?"
+    title: Who we are
     url: blogs
